# News-Notifications

./: .gitignore  LICENSE  README.md
News_notification/oil_sentinel/: config.ini.example  db.py  gdelt.py  main.py  market.py  oil_sentinel.db  pyproject.toml  requirements.txt  scorer.py  telegram_bot.py
News_notification/oil_sentinel/oil_sentinel/: __init__.py  config.py
News_notification/oil_sentinel/oil_sentinel/db/: __init__.py  models.py
News_notification/oil_sentinel/oil_sentinel/ingestion/: __init__.py  gdelt.py
News_notification/oil_sentinel/oil_sentinel/market/: poller.py
News_notification/oil_sentinel/oil_sentinel/notifications/: __init__.py  telegram.py
News_notification/oil_sentinel/oil_sentinel/scoring/: gemini.py
oil_sentinel/: config.ini.example  diagnostics.py  main.py  requirements.txt
oil_sentinel/oil_sentinel/: config.py  sitrep.py
oil_sentinel/oil_sentinel/accuracy/: __init__.py  evaluator.py
oil_sentinel/oil_sentinel/charts/: __init__.py  price_chart.py
oil_sentinel/oil_sentinel/db/: __init__.py  models.py
oil_sentinel/oil_sentinel/ingestion/: __init__.py  extractor.py  gdelt.py  google_news.py
oil_sentinel/oil_sentinel/market/: __init__.py  poller.py
oil_sentinel/oil_sentinel/narrative/: __init__.py  engine.py
oil_sentinel/oil_sentinel/notifications/: __init__.py  commands.py  telegram.py
oil_sentinel/oil_sentinel/portfolio/: __init__.py  chart.py  tracker.py
prediction_challange/: DNN_model.py  Fraud_Detection_Model.ipynb  data_test.csv  data_val_norm.csv  data_validation.csv  models.py
(+2 files in other folders)
