[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "oil-sentinel"
version = "0.1.0"
description = "Real-time oil-market news & price alert service"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.9.0",
    "yfinance>=0.2.40",
    "google-genai>=1.0.0",
]

[project.scripts]
oil-sentinel = "main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["oil_sentinel*"]
